# near-sdk-rs

./: CHANGELOG.md  Cargo.toml
examples/fungible-token/tests/: workspaces.rs
examples/lottery/: Cargo.toml
examples/lottery/src/: lib.rs
near-contract-standards/: CHANGELOG.md  Cargo.toml
near-sdk/: Cargo.toml
near-sdk/src/: lib.rs  random.rs
near-sys/: CHANGELOG.md
