[package]
name = "lottery"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { path = "../../near-sdk", default-features = false }
near-sdk-macros = { path = "../../near-sdk-macros" }

[features]
default = ["near-sdk/wee_alloc"]
secure-random = ["near-sdk/secure-random"]
unit-testing = ["near-sdk/unit-testing"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
